# algorithms-data-structures

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/bulk_quote/: CMakeLists.txt  bulk_quote.cpp
src/bulk_quote/bulk_quote/: bulk_quote.hpp
src/linked_lists/: CMakeLists.txt  linked_lists.cpp
src/linked_lists/linked_lists/: linked_lists.hpp
tests/: CMakeLists.txt  singly_linked_list.test.cpp
